# rendash

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
rendash/: __init__.py  __main__.py  cli.py  config.py  main.py
rendash/plugins/: __init__.py  basics.py  clock.py  http.py  mqtt.py  page.py  splits.py
rendash/utils/: __init__.py  text.py
