[metadata]
name = rendash
version = attr: rendash.__version__
author = Lauren Jenkinson
author_email = lauren@kat.net.nz
description = A plugin-oriented pygame-based status dashboard
long_description = file: README.md
long_description_content_type=text/markdown
url = https://git.sr.ht/~ren/rendash
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = False
packages = find:

python_requires = >=3.8
install_requires =
    pygame==2.0.1
    paho-mqtt==1.5.1
    requests==2.25.1

[options.extras_require]
build =
    bork==6.0.0b1
    pip==21.0.1
    setuptools==54.1.2
    wheel==0.36.2

[options.entry_points]
console_scripts =
    rendash = rendash.cli:main

[bdist]
bdist_base = build/bdist

[clean]
build_base = build
build_lib  = build/lib
bdist_base = build/bdist
all = True

[bork]
zipapp_main = rendash.cli:main
